// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductFilters /> renders with initial state 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2"
>
  <form>
    <div
      className="MuiCardHeader-root-28"
    >
      <div
        className="MuiCardHeader-content-31"
      >
        <span
          className="MuiTypography-root-34 MuiTypography-headline-39 MuiCardHeader-title-32"
        >
          Filters
        </span>
      </div>
      <div
        className="MuiCardHeader-action-30"
      >
        <button
          className="MuiButtonBase-root-64 MuiIconButton-root-58"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-63"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-73"
          />
        </button>
      </div>
    </div>
    <div
      className="MuiCardContent-root-80"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-81 MuiFormControl-fullWidth-84"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89 MuiInputLabel-shrink-88"
          data-shrink={true}
          htmlFor={undefined}
        >
          Name
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-105"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Lorem ipsum"
          />
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-114"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89 MuiInputLabel-shrink-88"
          data-shrink={true}
        >
          Product type
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <div
                className="Component-chipContainer-113"
              >
                <div
                  className="MuiChip-root-132 Component-chip-112"
                  onClick={undefined}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <span
                    className="MuiChip-label-137"
                  >
                    Type 1
                  </span>
                </div>
                <div
                  className="MuiChip-root-132 Component-chip-112"
                  onClick={undefined}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <span
                    className="MuiChip-label-137"
                  >
                    Type 4
                  </span>
                </div>
              </div>
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="productTypes"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="123123123,123123126"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="Component-widgetContainer-127"
      >
        <div
          className="Component-inputContainer-124"
        >
          <div
            className="MuiFormControl-root-81"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <label
              className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89 MuiInputLabel-shrink-88"
              data-shrink={true}
              htmlFor="price_min"
            >
              Price
            </label>
            <div
              className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-105 MuiInput-inputType-109"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_min"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value="30"
              />
              <div
                className="MuiInputAdornment-root-128 MuiInputAdornment-positionEnd-130"
              >
                <p
                  className="MuiTypography-root-34 MuiTypography-body1-43 MuiTypography-colorTextSecondary-56"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
          <span
            className="Component-separator-126"
          >
            -
          </span>
          <div
            className="MuiFormControl-root-81"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101 Component-pullDown-125"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-105 MuiInput-inputType-109"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_max"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value="50"
              />
              <div
                className="MuiInputAdornment-root-128 MuiInputAdornment-positionEnd-130"
              >
                <p
                  className="MuiTypography-root-34 MuiTypography-body1-43 MuiTypography-colorTextSecondary-56"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-131"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89 MuiInputLabel-shrink-88"
          data-shrink={true}
        >
          Published
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="published"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="true"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-131"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89 MuiInputLabel-shrink-88"
          data-shrink={true}
        >
          Highlighted
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="highlighted"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value="false"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<ProductFilters /> renders without initial state 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2"
>
  <form>
    <div
      className="MuiCardHeader-root-28"
    >
      <div
        className="MuiCardHeader-content-31"
      >
        <span
          className="MuiTypography-root-34 MuiTypography-headline-39 MuiCardHeader-title-32"
        >
          Filters
        </span>
      </div>
      <div
        className="MuiCardHeader-action-30"
      >
        <button
          className="MuiButtonBase-root-64 MuiIconButton-root-58"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-63"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-73"
          />
        </button>
      </div>
    </div>
    <div
      className="MuiCardContent-root-80"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-81 MuiFormControl-fullWidth-84"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89"
          data-shrink={false}
          htmlFor={undefined}
        >
          Name
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-105"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-114"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89"
          data-shrink={false}
        >
          Product type
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="productTypes"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="Component-widgetContainer-127"
      >
        <div
          className="Component-inputContainer-124"
        >
          <div
            className="MuiFormControl-root-81"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <label
              className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89"
              data-shrink={false}
              htmlFor="price_min"
            >
              Price
            </label>
            <div
              className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-105 MuiInput-inputType-109"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_min"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value=""
              />
              <div
                className="MuiInputAdornment-root-128 MuiInputAdornment-positionEnd-130"
              >
                <p
                  className="MuiTypography-root-34 MuiTypography-body1-43 MuiTypography-colorTextSecondary-56"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
          <span
            className="Component-separator-126"
          >
            -
          </span>
          <div
            className="MuiFormControl-root-81"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101 Component-pullDown-125"
            >
              <input
                aria-invalid={false}
                aria-required={false}
                autoComplete={undefined}
                autoFocus={undefined}
                className="MuiInput-input-105 MuiInput-inputType-109"
                defaultValue={undefined}
                disabled={false}
                id={undefined}
                name="price_max"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={undefined}
                onKeyUp={undefined}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                rows={undefined}
                type="number"
                value=""
              />
              <div
                className="MuiInputAdornment-root-128 MuiInputAdornment-positionEnd-130"
              >
                <p
                  className="MuiTypography-root-34 MuiTypography-body1-43 MuiTypography-colorTextSecondary-56"
                >
                  USD
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-131"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89"
          data-shrink={false}
        >
          Published
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="published"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Component-spacer-111"
      />
      <div
        className="MuiFormControl-root-81 Component-formControl-131"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <label
          className="MuiFormLabel-root-91 MuiInputLabel-root-85 MuiInputLabel-formControl-86 MuiInputLabel-animated-89"
          data-shrink={false}
        >
          Highlighted
        </label>
        <div
          className="MuiInput-root-97 MuiInput-fullWidth-104 MuiInput-formControl-98 MuiInput-underline-101"
        >
          <div
            className="MuiSelect-root-115"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-116 MuiSelect-selectMenu-117 MuiInput-input-105"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203",
                  }
                }
              />
            </div>
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="highlighted"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67 MuiSelect-icon-119"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
